refactor(gateway): use driver id from context
